TextInput component & basic style setup

--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,1 +1,19 @@
 $white: #FFFFFF;
+
+$grey0: #FAFAFA;
+$grey1: #E0E0E0;
+$grey2: #D8D8D8;
+$grey3: #CCCCCC;
+$grey4: #B5B5B5;
+$grey5: #A0A0A0;
+$grey6: #9A9A9A;
+$grey7: #6A6A6A;
+$grey8: #4C4C4C;
+$grey9: #363741;
+$grey10: #262626;
+
+$black: #000000;
+
+$default-font-color: $grey10;
+
+$text-input-label-color: $grey4;
