--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -16,6 +16,8 @@ $black: #000000;
 
 $dark-blue: #1C63AC;
 
+$primary-red: #D72D20;
+
 $default-font-color: $grey10;
 
 $text-input-label-color: $grey4;
