--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,6 @@
 @import './color.scss';
 @import './fonts.scss';
+@import './metrics.scss';
 @import './mixins';
 
 // Here you put all global css rules.
