--- a/src/features/home/DefaultPage.scss
+++ b/src/features/home/DefaultPage.scss
@@ -1,5 +1,4 @@
-@import '../../styles/mixins';
-@import '../../styles/color';
+@import '../../styles/global';
 
 .home-default-page {
   text-align: center;
@@ -79,16 +78,38 @@
 
 .modal {
   background-color: $white;
+  border-radius: 10px;
   margin: 20px auto;
-  max-width: 600px;
+  max-width: $modal-width;
   padding: 20px;
   width: 100%;
+  outline: none;
 }
 .modal-overlay {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+}
+.tab-list {
+  color: $white;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  .tab {
+    background-color: $grey4;
+    border-radius: 0;
+    cursor: pointer;
+    flex: 1;
+    padding: 15px 0;
+    text-align: center;
+    &.selected-tab {
+      background-color: $primary-red;
+    }
+  }
 }
